bugfix: fix for background filter not triggering on safari on iphone

--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,7 @@ body {
   left: 0;
   top: 0;
 }
-#banner-background-gradient {
+#banner-background-filter {
   width: 100%;
   height: 6.875rem;
 
@@ -69,6 +69,7 @@ body {
 
   filter: blur(100px);
   background: rgba(214, 19, 252, 0.62);
+  transform: translateZ(0);
 }
 
 #banner-content {
@@ -189,6 +190,7 @@ body {
 
   background: rgba(0, 191, 255, 1);
   filter: blur(40px);
+  transform: translateZ(0);
 }
 .card p {
   width: 5rem;
